css/simpler.css
/* ... */
select{
  appearance: none;
  /*background-image: url("data:image/svg+xml;charset=UTF-8,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' fill='none' stroke='currentColor' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'%3e%3cpolyline points='6 9 12 15 18 9'%3e%3c/polyline%3e%3c/svg%3e");
  background-repeat: no-repeat;
  background-position: right 0.5rem center;
  background-size: 1em;*/
}

button:active, button:focus, input:active, input:focus, select:active, select:focus{
  outline-color: #dc8877 !important;
  outline-width: 5px !important;
}

/* ----------------- COOKIES BAR ----------------- */

#cookie-bar.fixed{
  padding: 0.8rem;
  background: #111111d9;
}

#cookie-bar a.cb-enable{
  background: #842918;
  padding: 0.3rem 0.7rem;
  margin-left: 20px;
}

#cookie-bar a.cb-enable:hover{
  background: #9d3c29;
  color: white !important;
}

#cookie-bar a.cb-policy{
  background: #2b2b2b;
  padding: 0.3rem 0.7rem;
  margin-left: 15px;
}

#cookie-bar a.cb-policy:hover{
  background: #353535;
  color: white !important;
}

/* ----------------- DATE INPUT ----------------- */

.yui-skin-sam table{
  border-spacing: 0.8rem 0.2rem !important;
}

.yui-skin-sam .yui-calcontainer{
  background-color: #fbfbfb !important;
  border: 1px solid #c8c8c8 !important;
  padding: 1rem !important;
  border-radius: 8px;
  box-shadow: 1px 1px 10px #00000014;
}

.yui-skin-sam .yui-calcontainer .title{
  margin: 0 !important;
  background: none !important;
  border-bottom: none !important;
  padding: 0 !important;
}

.yui-skin-sam .yui-calendar a.calnav{
  color: #1A1A1A !important;
  border: none !important;
}
.yui-skin-sam .yui-calendar a.calnav:hover{
  background: none !important;
}

.yui-skin-sam .yui-calendar .calweekdaycell{
  /* background-color: none !important; */
  background: none;
  color: #575757 !important;
}
.yui-skin-sam .yui-calendar td.calcell{
  border: none !important;
  background: none !important;
  border-radius: 8px !important;
  transition: all 0.2s ease-out;
}
.yui-skin-sam .yui-calendar td.calcell:hover{
  background: #1A1A1A !important;
}
.yui-skin-sam .yui-calendar td.calcell:hover a{
  color: #FFFFFF !important;
}
.yui-skin-sam .yui-calendar td.calcell a {
  color: #1A1A1A !important;
  background: none !important;
}

.yui-skin-sam .yui-calendar td.calcell.oom{
  color: #BABABA !important;
  background: none !important;
}

.yui-skin-sam .yui-calendar td.calcell.today{
  background: #F2F2F2 !important;
}
.yui-skin-sam .yui-calendar td.calcell.today a{
  color: #1A1A1A !important;
}

.yui-skin-sam .yui-calcontainer .yui-cal-nav{
  background-color: #f5f5f5 !important;
  border-radius: 8px;
  border: 1px solid #a0a0a0;
  width: fit-content !important;
  align-items: center;
  margin-left: -20% !important;
}

.yui-skin-sam .yui-calcontainer .yui-cal-nav-mc {
  width: auto;
}
div.yui-cal-nav{
  padding: 0.5rem !important;
  display: grid;
  grid-template-columns: auto auto;
  gap: 0.5rem;
}

.yui-cal-nav-m, .yui-cal-nav-y, .yui-cal-nav-b{
  padding: 0 !important;
}
.yui-cal-nav-y{
  margin: 0.5rem 0;
}
.yui-cal-nav-b{
  display: flex;
  flex-direction: row-reverse;
  justify-content: center;
  gap: 0.5rem;
}
.yui-cal-nav-b{
  grid-column: 1/3;
}
.yui-skin-sam .yui-calcontainer .yui-cal-nav label{
  display: none !important;
}
.yui-skin-sam .yui-calcontainer .yui-cal-nav .yui-cal-nav-btn.yui-default button{
  background: #1A1A1A !important;
}
.yui-skin-sam .yui-calcontainer .yui-cal-nav .yui-cal-nav-btn {
  border: none !important;
  background: none !important;  
  margin: 0 !important;
}

.yui-skin-sam .yui-calcontainer .yui-cal-nav .yui-cal-nav-btn:hover{
  background: none !important;
}

.yui-skin-sam .yui-calcontainer .yui-cal-nav-yc{
  width: 7.5rem !important;
}

/* Warning boxes */

div.info > span, div.alerta > span {
  color: #000000;
  font-weight: 100;
  font-size: 1rem;
  background-image: none;
}

div.alerta, div.info, div.informa{
  display: flex;
  align-items: center;
  gap: 1rem;
  padding: 1.5rem 1rem !important;
  background-image: none !important;
  border: 0 !important;
  width: fit-content;
  margin: 1.5em 0 !important;
  color: #000000 !important;
  font-weight: normal !important;
}

div.alerta {
  background-color: #fdecee !important;
}

div.info, div.informa{
  background-color: #e6fafd !important;
}

div.alerta > span[class='se-icon ri-alert-fill'] {
  color: #ef4d61;
}

div.info > span[class='se-icon ri-information-fill'] {
  color: #02cfe9;
}

/* ----------------- SCHEDULE ----------------- */

.horario {
    table-layout: fixed !important;
    width: 100% !important;
    height: fit-content;
    border-collapse: collapse !important;
    border: solid 1px #b5b5b5 !important;
}

.horario tr {
    height: fit-content;
    position: relative;
}

.horario :is(td, th) {
    border: none !important;
    background: unset !important;
    color: unset !important;
    height: 100%;
}

.horario tbody :is(td, th) {
    padding: 4px !important;
}

.horario .column-start {
    border-left: solid 1px #b5b5b5 !important;
}

.horario tfoot {
    border-top: solid 1px #b5b5b5; 
}

.horario thead {
    border-bottom: solid 1px #b5b5b5 !important;
    background-color: white !important;
}

.horario thead th:first-of-type {
    width: 6ch;
}

.horario [data-se-hour-rule]::before {
    content: attr(data-se-hour-rule);
    position: absolute;
    left: 0;
    width: 6ch;
    top: 0;
    transform: translateY(-50%);
}

.horario [data-se-hour-rule]::after {
    content: "";
    position: absolute;
    background-color: #b5b5b5;
    height: 1px;
    left: 6ch;
    right: 0;
    top: 0;
}

.horario :is(.TP, .TE, .P, .OT, .PL, .TC, .S, .O)>* {
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(10ch, 1fr));
    grid-auto-rows: 1fr;
    place-items: center;
    gap: 4px;
    border-radius: 4px;
    padding: 4px;
    height: 100%;
    position: relative;
    z-index: 1;
}
/* ... */

